# acme-dns-rust

./: .dockerignore  .gitignore  .releaserc.yaml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  Test  docker-compose.yml  package-lock.json  package.json  prometheus.yml  shields.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: cache.yaml  docker.yaml  musl.yaml  release.yaml  rust.yaml
acme-dns-rust/: Cargo.toml
acme-dns-rust/src/: lib.rs  main.rs  util.rs
acme-dns-rust/src/config/: records.rs
acme-dns-rust/src/facade/: mod.rs
acme-dns-rust/tests/: cert.sh  leaf.crt  leaf.key  root-ca.crt  root-ca.key
cross/: openssl.sh
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: acme.rs  cert.rs  domain.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_domain.rs  m20220520_164236_create_cert.rs
migrations/postgres/: 20200811125158_initial.sql  20200812055613_txt.sql
src/: acme.rs  api.rs  cert.rs  config.rs  dns.rs  domain.rs  error.rs  http.rs  lib.rs  main.rs  util.rs
src/api/: metrics.rs  mod.rs  proxy.rs  routes.rs  tls.rs
src/config/: dns.rs  listener.rs  mod.rs  records.rs  test_config.toml
src/dns/: authority.rs  handler.rs  mod.rs  parse.rs
src/facade/: cert.crt  cert.rs  domain.rs  mod.rs
src/util/: error.rs  mod.rs
tests/: ca.crt  ca.key  cert.key  cert.sh  key.key  leaf.crt  leaf.key  root-ca.crt  root-ca.key  tls.rs
