[package]
name = "acme-dns-rust"
version = "0.1.0"
authors = ["conblem <ramonwehrli@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["acme-dns", "acme", "lets-encrypt", "dns", "async"]
categories = ["command-line-utilities"]
repository = "https://github.com/conblem/acme-dns-rust/"
description = "Acme DNS implementation written in Rust"

[[bin]]
name = "acme-dns-rust"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14", features = ["stream", "http1", "http2", "server", "runtime"] }
lazy_static = "1.4"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.15", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.6"
tokio-rustls = "0.23"
uuid = { version = "0.8", features = ["v4"] }
bcrypt = "0.10"
warp = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
acme-lib = "0.8"
trust-dns-server = { version = "0.20", features = ["resolver", "dns-over-rustls", "dns-over-https-rustls"] }
parking_lot = "0.11"
futures-util = "0.3"
rustls = "0.19"
toml = "0.5"
anyhow = "1.0"
ppp = "1"
async-trait = "0.1"
pin-project-lite = "0.2.7"

[dev-dependencies]
serde_test = "1.0"
tracing-test = "0.2"
tokio-test = "0.4"
testcontainers = "0.12"

[features]
default = ["postgres"]
disable-docker = []

postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]