[package]
name = "acme-dns-rust"
version = "0.1.0"
authors = ["conblem <ramonwehrli@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["acme-dns", "acme", "lets-encrypt", "dns", "async"]
categories = ["command-line-utilities"]
repository = "https://github.com/conblem/acme-dns-rust/"
description = "Acme DNS implementation written in Rust"

[[bin]]
name = "acme-dns-rust"
path = "src/main.rs"

[dependencies]
once_cell = "1"
hyper = { version = "0.14", features = ["stream", "http1", "http2", "server", "runtime"] }
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.18", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["io"]}
tokio-rustls = "0.23"
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.13"
warp = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
acme-lib = "0.8"
trust-dns-server = { version = "0.21", features = ["resolver", "dns-over-rustls", "dns-over-https-rustls"] }
parking_lot = "0.12"
futures-util = "0.3"
# only use this feature in test config
rustls = { version = "0.20", features = ["dangerous_configuration"]}
# update in the future 1.0 is already released
rustls-pemfile = "0.3.0"
toml = "0.5"
anyhow = "1.0"
ppp = "1"
async-trait = "0.1"
pin-project-lite = "0.2.7"

[dev-dependencies]
serde_test = "1.0"
tracing-test = "0.2"
tokio-test = "0.4"
testcontainers = "0.13"
rstest = "0.15"

[features]
default = ["postgres"]
disable-docker = []

postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]